# flatpak-builder

./: .gitignore  .gitmodules  MAINT.md  Makefile.am  NEWS  README.md  SECURITY.md  autogen.sh  configure.ac  meson.build  meson_options.txt
.github/: dependencies.apt.txt  dependencies.dnf.txt  issue_template.md
.github/ISSUE_TEMPLATE/: bug_template.yml  feature_template.yml
.github/workflows/: check.yml  release.yml
builder/: builder-main.c
buildutil/: glib-tap.mk
ci/: build.sh  libbuild.sh
common/: Makefile.am.inc  flatpak-utils.c  flatpak-utils.h
data/: Makefile.am  flatpak-manifest.schema.json
doc/: Makefile.am  flatpak-builder-docs.xml.in  flatpak-builder.xml  flatpak-manifest.xml  meson.build
src/: Makefile.am.inc  asc-font.h  builder-cache.c  builder-cache.h  builder-context.c  builder-context.h  builder-extension.c  builder-extension.h  builder-flatpak-utils.c  builder-flatpak-utils.h  builder-git.c  builder-git.h  builder-main.c  builder-manifest.c  builder-manifest.h  builder-module.c  builder-module.h  builder-options.c  builder-options.h  builder-post-process.c  builder-post-process.h  builder-sdk-config.c  builder-sdk-config.h  builder-source-archive.c  builder-source-bzr.c  builder-source-dir.c  builder-source-dir.h  builder-source-extra-data.c  builder-source-extra-data.h  builder-source-file.c  builder-source-git.c  builder-source-inline.c  builder-source-inline.h  builder-source-patch.c  builder-source-script.c  builder-source-shell.c  builder-source-svn.c  builder-source-svn.h  builder-source.c  builder-source.h  (+3 more)
subprojects/: libglnx.wrap  libyaml.wrap
tests/: Hello-desktop.appdata.xml  Hello.appdata.xml  Hello.desktop  Hello.xml  Makefile.am.inc  glib.supp  hello.tar.xz  installed-tests.sh.in  libtest.sh  lsan.supp  make-test-runtime.sh  meson.build  module1.eson  module1.yaml  module2.eson  module2.yaml  org.flatpak.appstream_media.json  org.flatpak.install_test.json  org.flatpak_builder.gui.desktop  org.flatpak_builder.gui.json  org.flatpak_builder.gui.metainfo.xml  org.test.Deprecated.MD5.archive.json  org.test.Deprecated.MD5.archive.yaml  org.test.Deprecated.MD5.file.json  org.test.Deprecated.MD5.file.yaml  org.test.Deprecated.SHA1.archive.json  org.test.Deprecated.SHA1.archive.yaml  org.test.Deprecated.SHA1.file.json  org.test.Deprecated.SHA1.file.yaml  org.test.Hello.appdata.xml  org.test.Hello.desktop  org.test.Hello.xml  source1.json  source2.json  test-build-subj.sh  test-builder-cgo.sh  test-builder-cleanup.sh  test-builder-deprecated.sh  test-builder-flags.sh  test-builder-licence-paths.sh  (+14 more)
tests/test-cargo/: README.md  example.yaml
tests/test-cargo-without-lockfile/: Cargo.toml  README.md
tests/test-cargo-without-lockfile/src/: main.rs
tests/test-keyring/: meson.build
tests/test-keyring2/: meson.build
